src/test/ui/consts/issue-miri-1910.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
LL |         copy_nonoverlapping(src, tmp.as_mut_ptr(), 1);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         unable to copy parts of a pointer from memory at ALLOC
   |         inside `std::ptr::read::<u8>` at $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
  ::: $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
   |
LL |         unsafe { read(self) }
   |                  ---------- inside `ptr::const_ptr::<impl *const u8>::read` at $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
   |
  ::: $DIR/issue-miri-1910.rs:8:5
   |
LL |     (&foo as *const _ as *const u8).add(one_and_a_half_pointers).read();
   |     ------------------------------------------------------------------- inside `C` at $DIR/issue-miri-1910.rs:8:5
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
